[project]
name = "telegram-group-monitor"
version = "1.0.0"
description = "Telegram 群聊监听和自动回复系统"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "telethon>=1.34.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

